--- a/index-medics.html
+++ b/index-medics.html
@@ -295,6 +295,22 @@
                 </div>
             </a>
         </div>
+        <div class="delorazepam">
+            <div class="delorazepam-info">
+                <h2>Делоразепам 2мг таблетки - Delorazepam 2mg таблетки</h2>
+                <p>Препарат делоразепам приймають для лікування тривоги, напруги та інші соматичних або психічних проявів, пов'язаних з синдромом тривоги. Безсоння. Бензодіазепіни показані лише тоді, коли розлад є серйозним, втрачає працездатність і викликає серйозний дистрес.
+                    Delorazepam , також відомий як chlordesmethyldiazepam , є анксіолітичний препарат з сімейства бензодіазепінів і активний метаболіт diclazepam також називається chlorodiazepam .
+                    Він багато в чому схожий на лоразепам, за винятком того, що він не має гідроксигрупи (-ОН) у положенні 3 діазепінового кільця, що призводить до ефекту, аналогічного лоразепаму, тобто сильного анксіолітика з вираженою амнезіальною дією. ефекти, але через відсутність гідроксильної групи він має більш тривалий період напіврозпаду , тобто діє довше.
+                </p>
+                <p><a href="delorazepam.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="delorazepam.html">
+                <div class="delorazepam-price">
+                    <img class="zym" src="img/delorazepam.jpg" title="Таблетки Делоразепам купити" alt="купити таблетки Делоразепам, Delorazepam в Україні">
+                    <p class="detal-inf">Ціна: 650 грн/уп.</p>
+                </div>
+            </a>
+        </div>
         <div class="valium-crapli">
             <div class="valium-crapli-info">
                 <h2>Валіум(Діазепам) краплі - Valium(Diazepam) краплі</h2>
@@ -323,7 +339,7 @@
             <a href="rivotril.html">
                 <div class="rivotril-price">
                     <img class="zym" src="img/rivotril.jpg" title="Таблетки Рівотріл купити" alt="купити таблетки Рівотріл, Rivotril в Україні">
-                    <p class="detal-inf">Ціна: 300 грн/уп.</p>
+                    <p class="detal-inf">Ціна: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -400,6 +416,21 @@
                 <div class="trittico-price">
                     <img class="zym" src="img/trittico.jpg" title="Таблетки Тріттіко купити" alt="купити таблетки Тріттіко,trittico 75мг в Україні">
                     <p class="detal-inf">Ціна: 450 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="nimesulide">
+            <div class="nimesulide-info">
+                <h2>Німесил(Німесулід) порошок - Nimesil(Nimesulide) порошок</h2>
+                <p>
+                    Німесил містить у якості діючої речовини німесулід ― НПЗП із переважною інгібуючою активністю стосовно ферменту ЦОГ-2. Німесулід має складний механізм дії, який включає зменшення утворення вільних радикалів та інших компонентів активації нейтрофілів, що додатково пояснює його протизапальну активність. Уперше німесулід почали застосовувати в Італії у 1985 р., та після цього він був зареєстрований більше ніж у 50 країнах.
+                </p>
+                <p><a href="nimesulide.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="nimesulide.html">
+                <div class="nimesulide-price">
+                    <img class="zym" src="img/nimesulide.jpg" title="Пакетики Німесил купити" alt="купити гранули,порошок Німесил,Німесулід в Україні">
+                    <p class="detal-inf">Ціна: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -585,7 +616,7 @@
             <a href="index-colchicine.html">
                 <div class="colchicine-price">
                     <img src="./img/colh.jpg" alt="купити колхіцин,colchicine,колхицин в Україні">
-                    <p class="detal-inf">Ціна: 500 грн/уп.</p>
+                    <p class="detal-inf">Ціна: 450 грн/уп.</p>
                 </div>
             </a>
         </div>
