--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -296,6 +296,22 @@
                 </div>
             </a>
         </div>
+        <div class="delorazepam">
+            <div class="delorazepam-info">
+                <h2>Делоразепам 2 мг таблетки - Delorazepam 2 мг таблетки</h2>
+                <p>Препарат делоразепам принимают для лечения тревоги, напряжения и других соматических или психических проявлений, связанных с синдромом тревоги. Бессонница. Бензодиазепины показаны только тогда, когда расстройство является серьезным, теряет работоспособность и вызывает серьезный дистресс.
+                    Delorazepam, также известный как chlordesmethyldiazepam, является анксиолитический препарат из семейства бензодиазепинов и активный метаболит diclazepam также называется chlorodiazepam.
+                    Он во многом похож на лоразепам, за исключением того, что он не имеет гидроксигруппы (-ОН) в положении 3 диазепинового кольца, что приводит к эффекту, аналогичному лоразепаму, то есть сильному анксиолитику с выраженным амнезиальным действием. эффекты, но из-за отсутствия гидроксильной группы он имеет более длительный период полураспада, то есть действует дольше.
+                </p>
+                <p><a href="delorazepam.html" class="detal-inf"><b>Подробная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="delorazepam.html">
+                <div class="delorazepam-price">
+                    <img class="zym" src="img/delorazepam.jpg" title="Таблетки Делоразепам купить" alt="купить таблетки Делоразепам, Delorazepam в Украине">
+                    <p class="detal-inf">Цена: 650 грн/уп.</p>
+                </div>
+            </a>
+        </div>
         <div class="valium-crapli">
             <div class="valium-crapli-info">
                 <h2>Валиум(Диазепам) капли - Valium(Diazepam) капли</h2>
@@ -324,7 +340,7 @@
             <a href="rivotril.html">
                 <div class="rivotril-price">
                     <img class="zym" src="img/rivotril.jpg" title="Таблетки Ривотрил купить" alt="купить таблетки Ривотрил, Rivotril в Украине">
-                    <p class="detal-inf">Цена: 300 грн/уп.</p>
+                    <p class="detal-inf">Цена: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -401,6 +417,21 @@
                 <div class="trittico-price">
                     <img class="zym" src="img/trittico.jpg" title="Таблетки Триттико купить" alt="купить таблетки Триттико,trittico 75мг в Украине">
                     <p class="detal-inf">Цена: 450 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="nimesulide">
+            <div class="nimesulide-info">
+                <h2>Нимесил(Нимесулид) порошок - Nimesil(Nimesulide) порошок</h2>
+                <p>
+                    Нимесил содержит в качестве действующего вещества нимесулид - НПВП с преимущественной ингибирующей активностью по отношению к ферменту ЦОГ-2. Нимесулид имеет сложный механизм действия, включающий уменьшение образования свободных радикалов и других компонентов активации нейтрофилов, что дополнительно объясняет его противовоспалительную активность. Впервые нимесулид начали применять в Италии в 1985 г., но после этого он был зарегистрирован более чем в 50 странах.
+                </p>
+                <p><a href="nimesulide.html" class="detal-inf"><b>Подробная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="nimesulide.html">
+                <div class="nimesulide-price">
+                    <img class="zym" src="img/nimesulide.jpg" title="Пакетики Нимесил купить" alt="купить гранулы,порошок Нимесил,Нимесулид в Украине">
+                    <p class="detal-inf">Цена: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -586,7 +617,7 @@
             <a href="index-colchicine.html">
                 <div class="colchicine-price">
                     <img src="./img/colh.jpg" alt="купить колхыцин,colchicine,колхицин в Украине">
-                    <p class="detal-inf">Цена: 500 грн/уп.</p>
+                    <p class="detal-inf">Цена: 450 грн/уп.</p>
                 </div>
             </a>
         </div>
