--- a/rus/trittico.html
+++ b/rus/trittico.html
@@ -82,7 +82,7 @@
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
                 <p class="price"><strong>Цена: 450 грн/уп.</strong></p>
-                <p class="stock"><b>В наличии</b></p>
+                <p class="stockNun"><b>Под заказ</b></p>
             </div>
         </div>
     </div>
